-----------------------------
lambkit-0.4.1：
优化：调整部分关键类的命名，增加Lambkit前缀
优化：LambkitService增加方法
优化：JFinal模板基类完善
优化：ResultJson更改为AjaxResult
优化：Application由使用类更改为系统基类，将Lambkit必须配置的部分放到这里，减轻DefaultModule的体量
修复: 默认LambkitControllerContext加入到运行时中

-----------------------------
lambkit-0.3.1：

优化：优化MSCH模型模板
优化：优化jwt的缓存配置
优化：优化jwt拦截器返回值
优化：优化upms的接口地址
优化：更改addin配置名称为enable
优化：优化Ehcache的path自定义功能
优化：优化Lms启用配置，增加地址配置功能
优化：优化GetawayRender支持当前系统其他地址的代理
修复：修复mgrdb、meta和upms配置交叉问题
修复：修复代码生成器sysconfig、meta同时运行的冲突问题
修复: 修复redirect错误

-----------------------------
lambkit-0.2.3：

新增：增加Msch工具类，简化生成器代码
新增：增加支持ActiveMQ消息功能
新增：增加支持Redis集群
新增：增加支持Kafka消息功能
新增：增加支持HBase功能
新增：增加支持Hadoop-hdfs文件管理功能
优化：优化jwt参数配置方式
优化：优化启动入口,改由LambkitApplication启动，启动配置改由Application
优化：优化SystemInfo为LambkitInfo是框架内部运行信息,位置移动到com.lambkit.common
优化：优化将数据库和表格信息的采集和存储方式（DbWrapper、TableWrapper）
优化：优化内部api管理功能，后续还待完善
删除：删除DevelopModule，改用LmsModule
删除：删除部分未实现的类
删除：删除com.lambkit.system包，更改为com.lambkit.common.monitor监控
删除：删除com.lambkit.core.http.api，更改为com.lambkit.core.api外部Api接口管理

-----------------------------
lambkit-0.2-alpha1：

新增：保留原server中的AppServer，更改为DefaultApplication。
新增：增加jwt权限管理机制JwtKit，查看com.lambkit.plugin.jwt。
新增：增加网易云信im服务端操作工具NimKit，查看com.lambkit.plugin.nim。
新增：增加网易云信短信服务工具NimMessageKit，查看com.lambkit.plugin.nim。
新增：UpmsUserRoleService的hasRole方法
新增：BaseController的getParameterMap、getParaToDouble和getParaToFloat方法
新增：MSCH模型，结合代码生成器和MSCH模板生成lambkit最佳实践代码。
优化：升级JFianl到3.8。
优化：优化启动方式，默认使用Undertow。
优化：LambkitModel增加setAttrs方法可以接收kv和json数据。
优化：DefaultModule中setJsonFactory(new MixJsonFactory());
优化：优化代码生成器Generator，方便使用，减少代码量。
优化：优化自动注册Module、Controller、Tag的机制。
优化：优化DevelopModule的位置，放到DefaultJFinalConfig，防止二次开发因缺少数据库而出错。
优化：优化微服务网关功能。
移除：删除com.lambkit.server及相关内容。

-----------------------------
lambkit-0.1-alpha4：

新增：增加meta的管理Controller，新增“com.lambkit.module.meta.web.controller.manage”包。
新增：增加meta页面，webapp/lambkit/mgrdb/dev/meta
新增：增加jwt权限管理机制JwtKit，查看com.lambkit.plugin.jwt。