@@ -1,4 +1,4 @@
-lambkit.version=0.2.3
+lambkit.version=0.4.1
 lambkit.mode=dev
 lambkit.autoRegisterModulePackages=
 lambkit.autoRegisterControllerPackages=
@@ -13,9 +13,10 @@ lambkit.module.lms.viewPath=
 #-----------------------
 #web
 #-----------------------
+lambkit.web.jsonp=true
+lambkit.web.excel=false
 lambkit.web.url = /
-lambkit.web.path=/template
-
+lambkit.web.path=/templates
 lambkit.web.admin.url = /admin
 lambkit.web.admin.path = /WEB-INF/admin
 lambkit.web.home.url = /center
@@ -26,9 +27,6 @@ lambkit.web.wap.url = /wap
 lambkit.web.wap.path = /wap
 lambkit.web.wechat.url = /wechat
 lambkit.web.wechat.path = /wechat
-
-lambkit.web.jsonp=true
-lambkit.web.excel=false
 
 #-----------------------
 #distributed node
